fix issue with clicks on elements behind

--- a/src/common/css/loader.css
+++ b/src/common/css/loader.css
@@ -1,11 +1,11 @@
 .loader-container {
   position: absolute;
   left: 50%;
-  top: 10%;
+  top: 15%;
   z-index: 1055;
   transform: translate(-50%, -50%);
   text-align: center;
 }
 .loader-hidden {
- visibility: hidden;
+  display: none; 
 }
